# bcc328

./: CHANGELOG.md  LICENSE  README.md  bcc328.cabal  flake.nix
imp/: Imp.lean  lake-manifest.json
imp/Imp/: Syntax.lean
lean/: lakefile.lean
lean/Imp/: Hoare.lean  Instr.lean  Interpreter.lean  Semantics.lean
src/: Hlist.hs
src/Exp/: Exp.hs
src/Exp/Backend/C/: ExpCCodegen.hs
src/Exp/Backend/SVM/: ExpSVMCodegen.hs
src/Exp/Frontend/Lexer/: ExpHandBuiltLexer.hs  Lexer.x  Token.hs
src/Exp/Frontend/Parser/: ExpHandWrittenParser.hs  Parser.y
src/Exp/Interpreter/: ExpInterpreter.hs
src/Exp/Syntax/: Syntax.hs
src/IfExp/: IfExp.hs  Syntax.hs
src/IfExp/Frontend/Lexer/: Lexer.x  Token.hs
src/IfExp/Frontend/Parser/: Parser.y
src/IfExp/Frontend/Semantics/: IfExpTypeChecker.hs
src/IfExp/Interpreter/: Interpreter.hs
src/IfExp/Syntax/: Syntax.hs
src/Imp/: Imp.hs
src/Imp/Backend/C/: ExpCCodegen.hs  StatementCCodegen.hs
src/Imp/Backend/SVM/: ExpCodegen.hs  StatementCodegen.hs
src/Imp/Frontend/Lexer/: Lexer.x
src/Imp/Frontend/Parser/: Parser.hs  Parser.info  Parser.y
src/Imp/Frontend/Semantics/: Basics.hs  ExpTypeChecker.hs  StatementTypeChecker.hs
src/Imp/Interpreter/: ImpInterpreter.hs
src/Imp/Syntax/: Syntax.hs
src/Lexer/Automata/: Basic.hs  DFA.hs  Minimization.hs  NFA.hs  NFALambda.hs  Rename.hs
src/Lexer/Regex/: Alternative.hs  Syntax.hs  ToDFA.hs
src/Lexer/Regex/Derivative/: Antimirov.hs  Brzozowski.hs  ToDFA.hs
src/Parser/Common/: ExtendGrammar.hs  First.hs  Follow.hs  Grammar.hs  Table.hs
src/Parser/Examples/: Expr.hs  IfElse.hs
src/Parser/LL/: Expr.hs  MkLL1Table.hs  Predictive.hs  Table.hs
src/Parser/LR/LR0/: MkLR0Table.hs
src/Parser/PEG/: ParsingExp.hs
src/Parser/Recursive/: SimpleCombinators.hs  SimpleExpr.hs
src/SVM/: Instr.hs  Interp.hs  StackLexer.hs  StackParser.hs  VMMain.hs
test/: Main.hs  iferr.if  ifok.if
test/Cases/: factorial.c  factorial.imp  factorial.svm
